--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.8",
-    "@mui/material": "^6.4.8",
+    "@mui/icons-material": "^6.4.9",
+    "@mui/material": "^6.4.9",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.6.0",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-circular-progressbar": "^2.2.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.4.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
