--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.6.2",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.484.0",
     "nodemailer": "^6.10.0",
@@ -31,7 +34,7 @@
     "react-dropzone": "^14.3.8",
     "react-feather": "^2.0.10",
     "react-router-dom": "^7.4.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2",
