--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
+    "nodemailer": "^6.10.0",
     "react": "^19.1.0",
     "react-chatbot-kit": "^2.2.2",
     "react-circular-progressbar": "^2.2.0",
