--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
-    "@mui/material": "^6.4.9",
+    "@mui/material": "^6.4.10",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -23,17 +23,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.484.0",
     "nodemailer": "^6.10.0",
+    "openai": "^4.91.1",
     "react": "^19.0.0",
-    "react-dropzone": "^14.3.8",
-    "react-feather": "^2.0.10",
     "react-chatbot-kit": "^2.2.2",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-feather": "^2.0.10",
     "react-lottie": "^1.2.10",
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
